--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to My Blog!</h1>
-        <hr>
         <ul>
             {% for post in paginator.posts %}
               <li>
@@ -16,10 +14,10 @@ layout: default
                     <div class="label-card">
                         <i class="fa fa-calendar"></i>{{ post.date | date: "%F" }}
                     </div>
-                    <div class="label-card">
+                    <!-- <div class="label-card">
                         {% if post.author %}<i class="fa fa-user"></i>{{ post.author }}
                         {% endif %}
-                    </div>
+                    </div> -->
                     <div class="label-card">
                         {% if page.meta %}<i class="fa fa-key"></i>{{ page.meta }}  {% endif %}
                     </div>
@@ -35,34 +33,36 @@ layout: default
                 <div class="excerpt">
                     {{post.excerpt}}
                 </div>
-<!--                 <div class="read-all">
+                <div class="read-all">
                     <a  href="{{ post.url | prepend: site.baseurl }}"><i class="fa fa-newspaper-o"></i>Read All</a>
-                </div> -->
+                </div>
                 <hr>
               </li>
             {% endfor %}
         </ul>
 
 
-
         <!-- Pagination links -->
-        <div class="pagination">
-          {% if paginator.previous_page %}
-            <a href="/index.html" class="previous"><i class="fa fa-angle-double-left"></i></a>
-            <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="previous"><i class="fa fa-angle-left"></i></a>
-          {% else %}
-            <span class="previous disable"><i class="fa fa-angle-double-left"></i></span>
-            <span class="previous disable"><i class="fa fa-angle-left"></i></span>
-          {% endif %}
-          <span class="page_number ">{{ paginator.page }}/{{ paginator.total_pages }}</span>
-          {% if paginator.next_page %}
-            <a href="{{ paginator.next_page_path }}" class="next"><i class="fa fa-angle-right"></i></a>
-            <a href="{{ site.baseurl }}/page{{ paginator.total_pages }}" class="next"><i class="fa fa-angle-double-right"></i></a>
-          {% else %}
-            <span class="next disable"><i class="fa fa-angle-right"></i></span>
-            <span class="next disable"><i class="fa fa-angle-double-right"></i></span>
-          {% endif %}
-        </div>
+        {% if paginator.total_pages > 1 %}
+           <div class="pagination">
+                {% if paginator.previous_page %}
+                  <a href="/index.html" class="previous"><i class="fa fa-angle-double-left"></i></a>
+                  <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="previous"><i class="fa fa-angle-left"></i></a>
+                {% else %}
+                  <span class="previous disable"><i class="fa fa-angle-double-left"></i></span>
+                  <span class="previous disable"><i class="fa fa-angle-left"></i></span>
+                {% endif %}
+                <span class="page_number ">{{ paginator.page }}/{{ paginator.total_pages }}</span>
+                {% if paginator.next_page %}
+                  <a href="{{ paginator.next_page_path }}" class="next"><i class="fa fa-angle-right"></i></a>
+                  <a href="{{ site.baseurl }}/page{{ paginator.total_pages }}" class="next"><i class="fa fa-angle-double-right"></i></a>
+                {% else %}
+                  <span class="next disable"><i class="fa fa-angle-right"></i></span>
+                  <span class="next disable"><i class="fa fa-angle-double-right"></i></span>
+                {% endif %}
+            </div>
+        {% endif %}
+        
     </div>
     <!-- <button class="anchor"><i class="fa fa-anchor"></i></button> -->
     <div class="right">
